Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1043,7 +1043,7 @@
 
     <!-- ==================== FOOTER ==================== -->
     <footer>
-        <p>✨ またね ✨</p>
+        <p>✨ またね! ✨</p>
     </footer>
 
     <!-- ==================== JAVASCRIPT: Countdown Timer ==================== -->
@@ -1110,4 +1110,5 @@
     </script>
 </body>
 </html>
+
 
